# razorback

./: .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml  publish-to-test-pypi.yml  publish.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: citation.rst  conf.py  index.rst  install.rst  overview.rst  quickstart.rst  script.rst
docs/source/_templates/: layout.html
docs/source/tutorials/: Untitled.ipynb  handling-time-series.ipynb  index.rst  signalset.doctest  signalset.ipynb  survey-study.ipynb  survey_study_colab_version.ipynb
docs/source/tutorials/data/: data credits
paper/: paper.bib  paper.md
razorback/: __init__.py  calibrations.py  cli.py  data.py  fourier_transform.py  mestimator.py  mt_proc.py  prefilters.py  signalset.py  typed.py  utils.py  visualize.py
razorback/io/: __init__.py  ats.py  binary_file_array.py  legacy.py  tsn.py
razorback/io/edi/: __init__.py  core.py  mt_edi.py
razorback/scripts/: __init__.py  procats_121.py
src/razorback/: __init__.py  calibrations.py  cli.py  errors.py  fourier_transform.py  mestimator.py  prefilters.py  signalset.py  utils.py  weights.py
src/razorback/io/: __init__.py  binary_file_array.py  mth5.py
tests/: test_cli.py  test_impedance.doctest  test_impedance.py  test_inventory.doctest  test_inventory.py  test_merge_consecutive_runs.py  test_mth5.py  test_prefilters.py  test_signalset.doctest  test_signalset.py  test_tags_from_path.py
