[project]
name = "razorback"
description = 'Robust estimation of linear response functions'
authors = [
    {name = "Farid Smai", email = "f.smai@brgm.fr"},
]
license = {text = "GNU GPLv3 License"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
version = "0.5.2"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "scipy",
    "dask[array]",
    "click",
]

[project.urls]
Homepage = "https://github.com/BRGM/razorback"
Documentation = "https://razorback.readthedocs.io"
Source = "https://github.com/BRGM/razorback"

[project.scripts]
rzb = "razorback.cli:cli"

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "project-toolbox>=0.2.1",
    "pytest>=9.0.2",
]
doc = [
    "nbsphinx>=0.9.8",
    "numpydoc>=1.10.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
addopts = "--doctest-glob='*.doctest'"
